@@ -8,55 +8,42 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
     @Bean
-    @Order(Ordered.HIGHEST_PRECEDENCE) // Make sure this runs before other filters
+    @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
+
+        // Allow credentials (cookies, auth headers)
         corsConfig.setAllowCredentials(true);
-        
-        // Allow Angular app origins
-        // Using allowedOriginPatterns instead of allowedOrigins to support dynamic ports
-        corsConfig.setAllowedOriginPatterns(Arrays.asList(
-            "http://localhost:*"  // Allow any port on localhost
+
+        // Allow any port on localhost (for your Angular app)
+        corsConfig.setAllowedOriginPatterns(List.of("http://localhost:*"));
+
+        // Allow standard HTTP methods
+        corsConfig.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"
         ));
-        
-        // Allow all methods
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
-        
-        // Allow specific headers
-        corsConfig.setAllowedHeaders(Arrays.asList(
-            "Origin", 
-            "Content-Type", 
-            "Accept", 
-            "Authorization", 
-            "Access-Control-Allow-Origin", 
-            "Access-Control-Request-Method", 
-            "Access-Control-Request-Headers",
-            "X-Requested-With",
-            "*"  // Allow all headers
+
+        // Allow any header from the client
+        corsConfig.addAllowedHeader(CorsConfiguration.ALL);
+
+        // Expose headers you need in the browser
+        corsConfig.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Disposition",
+                "Content-Length",
+                "Content-Type"
         ));
-        
-        // Expose headers to the client
-        corsConfig.setExposedHeaders(Arrays.asList(
-            "Access-Control-Allow-Origin",
-            "Access-Control-Allow-Methods",
-            "Access-Control-Allow-Headers",
-            "Access-Control-Max-Age",
-            "Access-Control-Request-Headers",
-            "Access-Control-Request-Method",
-            "Content-Disposition",  // Needed for file downloads
-            "Content-Type",
-            "Content-Length"
-        ));
-        
-        // Cache preflight response for 3600 seconds (1 hour)
+
+        // Cache preflight response for 1 hour
         corsConfig.setMaxAge(3600L);
 
+        // Apply this CORS config to all paths
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
 
